--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -707,7 +707,7 @@
    "metadata": {},
    "source": [
     "## Please Note:\n",
-    "The next cell will train the model which takes approx. 60min on a GTX 1080 GPU. The model was saved after training and is included in this repository, so that the following cells can be executed without executing the lengthy training procedure."
+    "The next cell will train the model which takes approx. 60min on a GTX 1080 GPU."
    ]
   },
   {
